[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
futures = "0.3.25"
grid = "0.15.0"
regex = "1.7.0"
reqwest = { version = "0.12.11", features = ["cookies"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
